# simple-rag-system

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  test_dependencies.py
app/: main.py  models.py
app/config/: __init__.py  auth.py  documents.py  embeddings.py  environment.py  llm.py  logging.py  redis.py  vectors.py
app/controllers/: document.py  documents.py  user.py
app/dependencies/: __init__.py  auth.py  chat.py  config.py  database.py  documents.py  services.py
app/schemas/: auth.py  document.py  upload.py
app/services/: document.py  documents.py  token.py  user.py
app/utils/: auth.py  deduping.py  errors.py
migrations/: env.py
migrations/versions/: 1e6c938414f9_initial_schema.py
scripts/: init_dev_db.sh
storage/uploads/: 53d306a9-f53e-4d4e-96aa-2978f2559d39.txt
tests/: README.md  run_tests.py  test_config.py  test_document_service.py
