[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.mypy]
# Disable mypy entirely
ignore_errors = true
# Or alternatively, be less strict:
# check_untyped_defs = false
# ignore_missing_imports = true
# warn_return_any = false
# warn_unused_configs = false
[tool.setuptools.packages.find]
include = ["app*"]
